# Calcifer

./: Cargo.toml  README.md  calcifer.project  calcifer_save.json  package-lock.json  package.json  shell.nix
.github/workflows/: deploy.yml  release.yml
project/: calcifer.nix  calcifer.project
src/: calcifer.rs  calcifer_base.rs  calcifer_save.json  index.html  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/calcifer/: app_base.rs
src/calcifer/code_editor/: highlighting.rs  mod.rs
src/calcifer/code_editor/themes/: fantasy.rs  mod.rs  sonokai.rs
src/core/: app.rs  mod.rs  state.rs  ui.rs
src/editor/: mod.rs
src/editor/syntax/: javascript.rs  mod.rs  pendragon.rs
src/editor/themes/: mod.rs
src/pages/: code.html  note.txt  notes.html  notes.js  projets.html
src/panels/: file_tree.rs  mod.rs  project_mode.rs  tabs.rs
src/panels/terminal/: linux_terminal.rs  mod.rs  windows_terminal.rs
src/sub_windows/: mod.rs  project_item.rs  search.rs  settings.rs  shortcuts.rs
src/tools/: calcifer_save.json  code_editor.rs  confirm.rs  file_tree.rs  mod.rs  profiler.rs  search.rs  settings.rs  shortcuts.rs  tabs.rs  terminal.rs  tests.rs  themes.rs  windows_terminal.rs
