[package]
name = "calcifer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
env_logger = { version = "0.10.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rfd = "0.12.1"
egui_extras = "0.25.0"
image = "0.24.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"


