[package]
name = "calcifer"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
eframe = "0.25.0"
rfd = "0.12.1"
egui_extras = "0.25.0"
image = "0.24.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
nix = { version = "0.27.1", features = ["fs"] }

