[package]
name = "calcifer"
version = "1.4.0"
edition = "2021"
#build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_extras = "0.25.0"
image = "0.24.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
nix = { version = "0.27.1", features = ["fs"] }
homedir = "0.2.1"
arboard = "3.3.0"
egui_dnd = "0.6.0"
